fix: fix unstable tests in route-registration modules by isolating JVM forks